--- a/OnlineShoppingPortal/test-output/index.html
+++ b/OnlineShoppingPortal/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\Lenovo\AppData\Local\Temp\testng-eclipse-216037864\testng-customsuite.xml</span>
+                    <span>C:\Users\Lenovo\AppData\Local\Temp\testng-eclipse-1943000631\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -103,7 +103,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="testPackage.RemoveProductFromCartTest" class="method navigator-link" hash-for-method="removeProduct">removeProduct</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="testPackage.AddToCartTest" class="method navigator-link" hash-for-method="addToCartTC_001">addToCartTC_001</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -121,14 +121,14 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">testPackage.RemoveProductFromCartTest</span>
+              <span class="class-name">testPackage.AddToCartTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="removeProduct">
-                  </a> <!-- removeProduct -->
-                  <span class="method-name">removeProduct</span>
+                  <a name="addToCartTC_001">
+                  </a> <!-- addToCartTC_001 -->
+                  <span class="method-name">addToCartTC_001</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -136,7 +136,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Lenovo\AppData\Local\Temp\testng-eclipse-216037864\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\Lenovo\AppData\Local\Temp\testng-eclipse-1943000631\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -145,7 +145,7 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;testPackage.RemoveProductFromCartTest&quot;/&gt;
+      &lt;class name=&quot;testPackage.AddToCartTest&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -187,14 +187,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'removeProduct')
-data.setCell(0, 2, 'testPackage.RemoveProductFromCartTest')
-data.setCell(0, 3, 9988);
+data.setCell(0, 1, 'addToCartTC_001')
+data.setCell(0, 2, 'testPackage.AddToCartTest')
+data.setCell(0, 3, 3827);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 9 seconds</span>
+              <span class="suite-total-time">Total running time: 3 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -206,10 +206,9 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="reporter-method-div">
-              <span class="reporter-method-name">removeProduct</span>
+              <span class="reporter-method-name">addToCartTC_001</span>
               <div class="reporter-method-output-div">
-                <span class="reporter-method-output">[TestCase --removeProduct Started]</span>
-                <span class="reporter-method-output">[TestCase --removeProduct Successfully Executed]</span>
+                <span class="reporter-method-output">Product is Added To Cart !!!</span>
               </div> <!-- reporter-method-output-div -->
             </div> <!-- reporter-method-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -227,26 +226,26 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">testPackage.RemoveProductFromCartTest</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">testPackage.AddToCartTest</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
                 <span class="method-name">browserSetup</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-class before -->
               <div class="configuration-class before">
                 <span class="method-name">login</span>
-                <span class="method-start">20610 ms</span>
+                <span class="method-start">11079 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
-                <span class="method-name">removeProduct</span>
-                <span class="method-start">28169 ms</span>
+                <span class="method-name">addToCartTC_001</span>
+                <span class="method-start">16975 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">logout</span>
-                <span class="method-start">38206 ms</span>
+                <span class="method-start">20812 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-class after">
                 <span class="method-name">browserTearDown</span>
-                <span class="method-start">39843 ms</span>
+                <span class="method-start">21926 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
